--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Game</title>
+    <title>You have lost the game</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <canvas id="game-canvas"></canvas>
-    <script src="scripts/app.js"></script>
+    <h1>Basic Fun</hl>
+
+        <script src="scripts/hello-worlm.js"></script>
 </body>
 
 </html>
